add readme link

--- a/index.html
+++ b/index.html
@@ -39,12 +39,29 @@
             text-align: right;
             margin-left: 10px;
         }
+        .readme-link {
+            text-align: center;
+            margin: 15px auto;
+        }
+        .readme-link a {
+            color: #4CAF50;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .readme-link a:hover {
+            text-decoration: underline;
+        }
         
     </style>
 </head>
 <body>
     <canvas id="canvas" width="800" height="800"></canvas>
     <div id="sliders"></div>
+    <div class="readme-link">
+        <a href="https://github.com/jm771/kissing_problem_viewer/blob/main/README.md" target="_blank">
+            View Project README
+        </a>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
