Add dimension selector

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="controls">
+        <div class="dimension-selector">
+            <label for="dimensionSelect">Dimensions:</label>
+            <select id="dimensionSelect">
+                <option value="3">3D</option>
+                <option value="4">4D</option>
+                <option value="11" selected>11D</option>
+            </select>
+        </div>
+    </div>
     <canvas id="canvas" width="800" height="800"></canvas>
     <div id="sliders"></div>
     <div class="readme-link">
