--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             </select>
         </div>
     </div>
-    <canvas id="canvas" width="800" height="800"></canvas>
+    <div class="canvas-container">
+        <canvas id="canvas" width="800" height="800"></canvas>
+    </div>
     <div id="sliders"></div>
     <div class="readme-link">
         <a href="https://github.com/jm771/kissing_problem_viewer/blob/main/README.md" target="_blank">
