--- a/index.html
+++ b/index.html
@@ -54,8 +54,15 @@
         
         <div>
             <label for="rotationStepSlider">Rotation Step Size: </label>
-            <input type="range" id="rotationStepSlider" min="0.01" max="0.785" value="0.1" step="0.01">
-            <span id="rotationStepSliderValue">0.1</span>
+            <input type="range" id="rotationStepSlider" min="0.0000001" max="0.785" value="0.31415926" step="0.0000001">
+            <span id="rotationStepSliderValue">0.31415926</span>
+        </div>
+        <div class="toggle-container">
+            <label for="tumbleToggle">Tumble Mode: </label>
+            <label class="toggle-switch">
+                <input type="checkbox" id="tumbleToggle">
+                <span class="toggle-slider"></span>
+            </label>
         </div>
         
         <div class="button-container">
