--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <select id="dimensionSelect">
                 <option value="3">3D</option>
                 <option value="4">4D</option>
+                <option value="5">5D</option>
                 <option value="11" selected>11D</option>
             </select>
         </div>
